--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera!</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> Star Wars Robots </title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<h1>
-		Hi, everyone! This is my first webpage!
-	</h1>
+<h1>Star Wars Robots</h1>
+
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12" id='r2-d2'>
+    <div class='heading'> R2-D2 </div>
+    <p>
+      R2-D2 is a fictional droid character in the Star Wars franchise created by George Lucas. He has appeared in nin of the ten Star Wars films to date. At various points throughout the course of the films, R2 is a friend to C-3PO, Padmé Amidala, Anakin Skywalker, Leia Organa, Luke Skywalker, Obi-Wan Kenobi, BB-8 and Rey. 
+    </p>
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12" id='bb-8'>
+    <div class="heading"> BB-8 </div>
+    <p>
+      BB-8 is a droid character in the Star Wars franchise, first appearing in the 2015 Star Wars: The Force Awakens. It later appeared in 2017's Star Wars: The Last Jedi, and 2019's Star Wars: The Rise of Skywalker. Spherical with a free-moving domed head, BB-8 is portrayed by both a rod puppet and a remote-controlled robotic unit.
+    </p>
+  </div>
+
+  <div class="col-lg-4 col-md-12 col-sm-12" id='bb-9e'>
+    <div class="heading"> BB-9E </div>
+    <p>
+      BB-9E was a black-plated BB-series astromech droid in the service of the First Order. The droid featured a distinctive squarer domed head and red-colored sensor. In addition, due to the First Order's views on droids simply being machines, he had a cold, sinister, and even malicious personality to his programming and used to have constant memory wipes to remain subservient and docile.
+    </p>
+  </div>
+</div>
 
 </body>
 </html>
